[gd_scene load_steps=8 format=3 uid="uid://b24kgo8ixb0rx"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_0e4c3"]
[ext_resource type="AudioStream" uid="uid://ccla8qaeo4070" path="res://Audio/JumpSound.mp3" id="2_nxlhb"]
[ext_resource type="AudioStream" uid="uid://cf3gbh8poaard" path="res://Audio/GunShot.mp3" id="3_x3nkl"]
[ext_resource type="Texture2D" uid="uid://d3ypb3j6pmktv" path="res://textures/Gun.png" id="4_iobkl"]
[ext_resource type="Texture2D" uid="uid://c3qm5qpkxgkow" path="res://textures/Crosshair_Dot.png" id="5_tp1hm"]
[ext_resource type="Texture2D" uid="uid://bovl425g0ph3t" path="res://textures/muzzle_flash.png" id="6_yrr2d"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qcre3"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_0e4c3")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_qcre3")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
fov = 90.0

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -25)

[node name="MuzzleLight" type="OmniLight3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.246221, -0.4315)
visible = false
light_color = Color(1, 1, 0, 1)

[node name="JumpSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_nxlhb")
volume_db = -1.0

[node name="GunshotSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_x3nkl")
volume_db = -5.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MuzzleFlash" type="TextureRect" parent="CanvasLayer/Control"]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -109.0
offset_right = 53.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_yrr2d")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_iobkl")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_tp1hm")
